# depths_below

./: .gitignore  ART_BRIEF.md  LICENSE  README.md
depths_below/: CLAUDE.md  Cargo.toml  MODULES.md  generate_all_sprites.py  generate_animated_creatures.py  generate_creature_sprites.py  generate_creatures.py  generate_sprites.py
depths_below/assets/audio/: CREDITS.md
depths_below/designs/: starter.json
depths_below/designs/factions/: abyssal_cult.json  blackwater.json  drowned.json  glass_eye.json  iron_tide.json  leviathan.json  pressure_king.json  rust_swarm.json
depths_below/meta/: unlocks.json
depths_below/src/: abyss_horror.rs  audio.rs  camera.rs  components.rs  debug.rs  demo.rs  events.rs  gamepad.rs  main.rs  meta.rs  radar.rs  resources.rs  sonar.rs  spatial.rs  sprite_map.rs  states.rs
depths_below/src/ai_ship/: ai_brain.rs  combat.rs  components.rs  crew.rs  layouts.rs  mod.rs  movement.rs  noise.rs  power.rs  scavenger.rs  simulation.rs  spawner.rs  wreck.rs
depths_below/src/ai_submarine/: ai_brain.rs  combat.rs  components.rs  layouts.rs  mod.rs  movement.rs  noise.rs  simulation.rs  spawner.rs  wreck.rs
depths_below/src/building/: blueprint.rs  build_history.rs  build_info.rs  clipboard.rs  footprints.rs  inspection.rs  mod.rs  registry.rs  rooms.rs  stat_calculator.rs  symmetry.rs  template_ghost.rs  templates.rs
depths_below/src/celestial/: black_holes.rs  components.rs  events.rs  gravity.rs  mod.rs  orbits.rs  poi.rs  resources.rs  spawning.rs  stars.rs  warp.rs
depths_below/src/combat/: ammo_types.rs  chain_reactions.rs  effects.rs  (+13 more)
(+95 files in other folders)
