[package]
name = "depths_below"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.11", features = ["dynamic_linking"] }
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
smallvec = "1.11"

# Optimize for fast compile times during development
[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

# Optimize for performance in release
[profile.release]
lto = true
codegen-units = 1
